fixed z-indexing and is now directly on top of other components

--- a/portfolio-website/src/components/about/About.css
+++ b/portfolio-website/src/components/about/About.css
@@ -1,5 +1,6 @@
 .AboutPage {
     position: relative;
+    text-align: center;
     color: white;
     z-index: 3;
 }
